--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -2,6 +2,8 @@
   "$schema": "https://json.schemastore.org/pyrightconfig.json",
   "venvPath": ".",
   "venv": ".venv",
-  "pythonVersion": "3.8",
-  "typeCheckingMode": "basic"
+  "pythonVersion": "3.9",
+  "typeCheckingMode": "basic",
+  "pythonPath": "/opt/miniconda3/bin/python",
+  "reportMissingImports": false
 }
